# GingillaFarm

./: .env.example  .gitIgnore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
Map/: index.html
assets/: README.md
buildings/CarrotTracker/: docker-compose.yml
buildings/CarrotTracker/frontend/: index.html  package-lock.json  package.json
buildings/CarrotTracker/server/: Dockerfile  requirements.txt
buildings/Icons/client/: Dockerfile  nginx.conf  package-lock.json  package.json
buildings/Icons/server/: main.py  requirements.txt
buildings/Limodim/client/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
buildings/Limodim/server/: Dockerfile  add_mocks.py  drop_tables.py  main.py  requirements.txt
buildings/Mitamnim/client/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
buildings/Mitamnim/server/: Dockerfile  main.py  requirements.txt
buildings/microservers/ai_service/: Dockerfile  README.md  main.py  requirements.txt
buildings/microservers/db_manager/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
buildings/microservers/farm_gate/: Dockerfile  README.md  main.py
buildings/microservers/foreman/: Dockerfile  README.md  main.py  requirements.txt
messenger/: Dockerfile  bot_test.py  index.html  main.py
postgres/: .env.example  docker-compose.yml
watchDogs/: README.md
watchDogs/blueprintDog/: README.md  blueprintDog.py  blueprint_config.json
watchDogs/healthDog/: README.md  healthDog.py  pyproject.toml
watchDogs/logDog/: README.md
(+222 files in other folders)
